# kv-cache-tradeoffs

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  tests.yml
configs/bench/: compression_sweep.yaml  kv_scaling.yaml  latency.yaml  throughput.yaml
configs/data/: openwebtext_subset.yaml  synthetic_long.yaml  tinystories.yaml
configs/model/: s1_5m.yaml  s2_20m.yaml  s3_80m.yaml
configs/runs/: paper_defaults.yaml  quick_smoke.yaml
docs/: index.md
docs/agent-memory/: agent-reference.md  feature-queue.md  guidelines.md  project-status.md  reference.md  working-memory.md
docs/blog/: 001-kv-cache-scaling.md  002-mqa-vs-gqa.md  003-latency-breakdown.md
docs/paper/: abstract.md  figures.md  notes.md  outline.md  references.md
results/: README.md
src/kvbench/: __init__.py  cli.py  config.py  logging.py
src/kvbench/bench/: __init__.py  kv_scaling.py  latency_breakdown.py  sweep.py  throughput.py
src/kvbench/data/: __init__.py  tokenization.py
src/kvbench/eval/: __init__.py  next_token_acc.py  perplexity.py  quality_suite.py
src/kvbench/models/: __init__.py  checkpoints.py  gpt.py
src/kvbench/plotting/: __init__.py  fig_compression_threshold.py  fig_kv_memory.py  fig_latency_breakdown.py  fig_quality.py  fig_throughput.py
src/kvbench/scripts/: download_data.sh  (+3 more)
tests/: test_attention_shapes.py  test_cli_smoke.py  test_kv_cache_growth.py  test_reproducibility_seed.py
(+18 files in other folders)
