[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kv-cache-tradeoffs"
version = "0.1.0"
description = "Reproducible KV-cache tradeoff benchmarks for transformer attention variants."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "torch>=2.3",
  "numpy>=1.24",
  "pandas>=2.1",
  "pyyaml>=6.0",
  "typer>=0.12",
  "rich>=13.7",
  "tqdm>=4.66",
  "matplotlib>=3.8",
  "seaborn>=0.13",
]

[project.optional-dependencies]
dev = ["ruff", "black", "mypy", "pytest", "pytest-cov"]

[tool.pytest.ini_options]
addopts = ["-q", "--disable-warnings", "--strict-markers"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["kvbench*"]

[tool.mypy]
python_version = "3.10"
strict = true
